--- a/pages/css/reviews.css
+++ b/pages/css/reviews.css
@@ -7917,3 +7917,127 @@
   opacity: 1 !important;
   padding: 16px !important;
 }
+._1536r8x {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  margin-top: 8px !important;
+  margin-bottom: 8px !important;
+}
+._4fwio0 {
+  margin-right: 8px !important;
+  margin-bottom: 8px !important;
+}
+._np90lm {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgb(221, 221, 221) !important;
+  background-color: rgb(255, 255, 255) !important;
+  outline: none !important;
+  margin: 0px !important;
+  color: rgb(34, 34, 34) !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  padding: 4px 16px !important;
+  border-radius: 20px !important;
+  min-height: 40px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+@media (hover: hover) {
+  ._np90lm:hover {
+    color: rgb(0, 0, 0) !important;
+    border-color: rgb(0, 0, 0) !important;
+  }
+}
+._1vwho579 {
+  display: block !important;
+  height: 0px !important;
+  overflow: hidden !important;
+  visibility: hidden !important;
+  pointer-events: none !important;
+  background-color: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+  border-color: rgb(34, 34, 34) !important;
+}
+._1vwho579::after {
+  content: '' !important;
+  width: calc(100% + 2px) !important;
+  height: calc(100% + 2px) !important;
+  background-color: transparent !important;
+  position: absolute !important;
+  top: -1px !important;
+  left: -1px !important;
+  border-color: inherit !important;
+  border-style: solid !important;
+  border-width: 2px !important;
+  border-radius: inherit !important;
+}
+._1h0bjrrv {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid rgb(34, 34, 34) !important;
+  outline: none !important;
+  margin: 0px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  padding: 4px 16px !important;
+  border-radius: 20px !important;
+  min-height: 40px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+  background-color: rgb(247, 247, 247) !important;
+  color: rgb(34, 34, 34) !important;
+}
+
+@media (hover: hover) {
+  ._1h0bjrrv:hover {
+    color: rgb(0, 0, 0) !important;
+    border-color: rgb(0, 0, 0) !important;
+  }
+}
+._1wgf3yo {
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  color: rgb(34, 34, 34) !important;
+}
+._4l12l8 {
+  margin-top: 8px !important;
+}
+._1aoj0ap {
+  box-shadow: rgb(176 176 176) 0px 0px 0px 1px inset !important;
+  box-sizing: border-box !important;
+  color: rgb(34, 34, 34) !important;
+  padding: 4px !important;
+  border-radius: 8px !important;
+}
+._159914b {
+  color: inherit !important;
+  display: block !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
+  outline: none !important;
+  border: none !important;
+  margin: 0px !important;
+  box-sizing: border-box !important;
+  background-color: transparent !important;
+  appearance: none !important;
+  padding: 8px !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
