--- a/css/layouts.css
+++ b/css/layouts.css
@@ -80,6 +80,136 @@
   font-size: 14px !important;
   font-weight: 600 !important;
 }
+.coxzsxx[class][class] {
+  position: relative;
+  z-index: 1;
+}
+.dir.coxzsxx[class][class] {
+  background: white;
+}
+.dir.ilrd0ld[class][class] {
+  padding: 14px 24px 0 24px;
+}
+.c109ki4m[class][class] {
+  align-items: stretch;
+  color: var(--f-k-smk-x);
+  display: flex;
+  min-height: 56px;
+  min-width: 285px;
+}
+.dir.c109ki4m[class][class] {
+  background: var(---pc-g-v-g);
+  border-radius: 1000px;
+}
+.dir.e11vjh0i[class][class] {
+  background: var(--f-mkcy-f);
+  border: 0.5px solid rgba(0, 0, 0, 0.08);
+  box-shadow: 0 3px 10px rgb(0 0 0 / 10%);
+  transform: translate3d(0, 0, 0);
+}
+.ljicvoc[class][class] {
+  align-items: center;
+  display: flex;
+  min-width: 100px;
+  width: 100%;
+}
+._1g4hcx99 {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  cursor: pointer !important;
+  position: relative !important;
+  border-color: black !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  line-height: inherit !important;
+  font-weight: inherit !important;
+  border-radius: 0px !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  outline: none !important;
+  padding-top: 14px !important;
+  padding-bottom: 14px !important;
+  padding-left: 24px !important;
+  padding-right: 24px !important;
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  transition: none !important;
+  -webkit-tap-highlight-color: transparent !important;
+  background: transparent !important;
+  border: none !important;
+  color: inherit !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  height: 100% !important;
+  width: 100% !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  min-width: 0 !important;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+.dir-ltr.l1762013[class][class] {
+  padding: 0 var(--jaa-ni-h) 0 20px;
+}
+.cfpmckc[class][class] {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.fw09vnz[class][class] {
+  display: flex;
+  min-width: 0;
+}
+.dir-ltr.cfpmckc[class][class] {
+  padding-left: 2px;
+}
+.p1uhuw2g[class][class] {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 20px;
+}
+.fw09vnz[class][class] {
+  display: flex;
+  min-width: 0;
+}
+.i1hupcay[class][class] {
+  display: flex;
+  min-width: 50px;
+}
+.c120lmsc[class][class] {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.s1t0vaho[class][class] {
+  color: var(--fo-jk-r-s);
+  display: flex;
+  font-size: 12px;
+  line-height: 16px;
+}
+.fw09vnz[class][class] {
+  display: flex;
+  min-width: 0;
+}
+.dir.s1zug1q[class][class] {
+  padding: 0 5px;
+}
+.c120lmsc[class][class] {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 /* Header mobile */
 
 /* Header */
