--- a/pages/css/login-security.css
+++ b/pages/css/login-security.css
@@ -8892,3 +8892,275 @@ html.scrollbar-gutter[class][class] {
   color: inherit !important;
   contain: paint !important;
 }
+._9hxttoo {
+  display: block !important;
+  width: 100% !important;
+}
+._rin72m {
+  background: transparent !important;
+  border: 0px !important;
+  cursor: pointer !important;
+  display: block !important;
+  padding: 0px !important;
+}
+._1wcr140x {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: rgb(72, 72, 72) !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(235, 235, 235) !important;
+  border-radius: 4px !important;
+  background-color: rgb(255, 255, 255) !important;
+  position: relative !important;
+  z-index: 0 !important;
+  margin-bottom: 8px !important;
+  display: block !important;
+  width: 100% !important;
+}
+@supports (--custom: properties) {
+  ._1wcr140x {
+    font-size: var(--font-form-element-font-size, 16px) !important;
+    line-height: var(--font-form-element-line-height, 24px) !important;
+    letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
+    font-family: var(
+      --font-form-element-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(
+      --font-form-element-text-transform,
+      undefined
+    ) !important;
+    color: var(--font-form-element-color, #484848) !important;
+    padding-top: var(--font-form-element-padding-top, undefined) !important;
+    padding-bottom: var(
+      --font-form-element-padding-bottom,
+      undefined
+    ) !important;
+    border-width: var(--border-form-element-border-width, 1px) !important;
+    border-color: var(--color-input-border, #ebebeb) !important;
+    border-radius: var(--border-form-element-border-radius, 4px) !important;
+    background-color: var(--color-input-background, #ffffff) !important;
+    margin-bottom: var(--unit, 8px) !important;
+  }
+}
+._178faes {
+  overflow: hidden !important;
+  position: relative !important;
+}
+._14fdu48d {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: rgb(72, 72, 72) !important;
+  padding: 11px !important;
+  font-weight: normal !important;
+  background-color: transparent !important;
+  border: 0px !important;
+  width: 100% !important;
+  margin: 0px !important;
+}
+@supports (--custom: properties) {
+  ._14fdu48d {
+    font-size: var(--font-form-element-font-size, 16px) !important;
+    line-height: var(--font-form-element-line-height, 24px) !important;
+    letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
+    font-family: var(
+      --font-form-element-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(
+      --font-form-element-text-transform,
+      undefined
+    ) !important;
+    color: var(--font-form-element-color, #484848) !important;
+    padding-top: var(--spacing-form-element-vertical, 11px) !important;
+    padding-bottom: var(--spacing-form-element-vertical, 11px) !important;
+    font-weight: var(--font-light-font-weight, normal) !important;
+    background-color: var(--color-clear, transparent) !important;
+    padding-left: var(--spacing-form-element-horizontal, 11px) !important;
+    padding-right: var(--spacing-form-element-horizontal, 11px) !important;
+  }
+}
+._kt3i5a4 {
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  transition-property: background, border-color, color !important;
+  transition-duration: 0.2s !important;
+  transition-timing-function: ease-out !important;
+  width: auto !important;
+  cursor: pointer !important;
+  border-radius: 4px !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  padding: 10px 22px !important;
+  font-weight: 800 !important;
+  border-width: 2px !important;
+  border-style: solid !important;
+  min-width: 71.1935px !important;
+  box-shadow: none !important;
+  background: rgb(0, 132, 137) !important;
+  border-color: transparent !important;
+  color: rgb(255, 255, 255) !important;
+}
+@supports (--custom: properties) {
+  ._kt3i5a4 {
+    border-radius: var(--border-button-border-radius, 4px) !important;
+    font-size: var(--font-button-font-size, 16px) !important;
+    line-height: var(--font-button-line-height, 24px) !important;
+    letter-spacing: var(--font-button-letter-spacing, normal) !important;
+    font-family: var(
+      --font-button-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(--font-button-text-transform, undefined) !important;
+    padding-top: var(--spacing-button-vertical, 10px) !important;
+    padding-bottom: var(--spacing-button-vertical, 10px) !important;
+    font-weight: var(--font-bold-font-weight, 800) !important;
+    border-width: var(--border-button-border-width, 2px) !important;
+    padding-left: var(--spacing-button-horizontal, 22px) !important;
+    padding-right: var(--spacing-button-horizontal, 22px) !important;
+    box-shadow: var(--shadow-button-level0-box-shadow, none) !important;
+    background: var(--color-buttons-default-color, #008489) !important;
+    border-color: var(--color-buttons-default-border, transparent) !important;
+    color: var(--color-buttons-default-text, #ffffff) !important;
+  }
+}
+._kt3i5a4:hover {
+  background: rgb(0, 132, 137) !important;
+  border-color: transparent !important;
+  color: rgb(255, 255, 255) !important;
+}
+@supports (--custom: properties) {
+  ._kt3i5a4:hover {
+    background: var(--color-buttons-default-hover-color, #008489) !important;
+    border-color: var(
+      --color-buttons-default-hover-border,
+      transparent
+    ) !important;
+    color: var(--color-buttons-default-hover-text, #ffffff) !important;
+  }
+}
+._ftj2sg4 {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: inherit !important;
+}
+@supports (--custom: properties) {
+  ._ftj2sg4 {
+    font-size: var(--font-button-font-size, 16px) !important;
+    line-height: var(--font-button-line-height, 24px) !important;
+    letter-spacing: var(--font-button-letter-spacing, normal) !important;
+    font-family: var(
+      --font-button-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(--font-button-text-transform, undefined) !important;
+    padding-top: var(--font-button-padding-top, undefined) !important;
+    padding-bottom: var(--font-button-padding-bottom, undefined) !important;
+  }
+}
+._7t0a7a {
+  position: relative !important;
+  display: table !important;
+  table-layout: fixed !important;
+  width: 100% !important;
+}
+._1vx4gysb {
+  height: 100% !important;
+  display: table-cell !important;
+  vertical-align: top !important;
+  border-style: solid !important;
+  border-width: 2px 0px 2px 2px !important;
+  border-radius: 8px 0px 0px 8px !important;
+  padding: 16px 0px 16px 12px !important;
+  width: 48px !important;
+  background-color: rgb(252, 100, 45) !important;
+  border-color: rgb(252, 100, 45) !important;
+}
+._1n9nq7g {
+  display: table-cell !important;
+  vertical-align: top !important;
+  width: 100% !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-color: rgb(235, 235, 235) !important;
+  border-style: solid !important;
+  border-width: 2px 2px 2px 0px !important;
+  border-radius: 0px 8px 8px 0px !important;
+  padding: 20px 8px !important;
+}
+._hgs47m {
+  display: table !important;
+  width: 100% !important;
+  border-spacing: 0px !important;
+}
+._n5lh69r {
+  display: table-cell !important;
+  width: 100% !important;
+  vertical-align: top !important;
+}
+._121z06r2 {
+  margin: 0px !important;
+  overflow-wrap: break-word !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 14px !important;
+  font-weight: 600 !important;
+  line-height: 1.28571em !important;
+  color: rgb(72, 72, 72) !important;
+}
+._kt3i5a4:focus {
+  box-shadow: rgb(255 255 255) 0px 0px 0px 4px, rgb(113 113 113) 0px 0px 0px 5px,
+    rgb(255 255 255 / 50%) 0px 0px 0px 6px !important;
+  outline: none !important;
+  transition: box-shadow 0.2s ease 0s !important;
+}
+._kt3i5a4:active {
+  background: rgb(0, 106, 112) !important;
+  border-color: transparent !important;
+  color: rgb(255, 255, 255) !important;
+}
+@supports (--custom: properties) {
+  ._kt3i5a4:active {
+    background: var(--color-buttons-default-active-color, #006a70) !important;
+    border-color: var(
+      --color-buttons-default-active-border,
+      transparent
+    ) !important;
+    color: var(--color-buttons-default-active-text, #ffffff) !important;
+  }
+}
