--- a/pages/css/preferences.css
+++ b/pages/css/preferences.css
@@ -6653,3 +6653,288 @@ html.scrollbar-gutter[class][class] {
   color: inherit !important;
   contain: paint !important;
 }
+._9hxttoo {
+  display: block !important;
+  width: 100% !important;
+}
+._krjbj {
+  border: 0px !important;
+  clip: rect(0px, 0px, 0px, 0px) !important;
+  clip-path: inset(100%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0px !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+._wlf6154 {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: rgb(72, 72, 72) !important;
+  position: relative !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(235, 235, 235) !important;
+  border-radius: 4px !important;
+  margin-bottom: 8px !important;
+  display: block !important;
+  width: 100% !important;
+}
+@supports (--custom: properties) {
+  ._wlf6154 {
+    font-size: var(--font-form-element-font-size, 16px) !important;
+    line-height: var(--font-form-element-line-height, 24px) !important;
+    letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
+    font-family: var(
+      --font-form-element-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(
+      --font-form-element-text-transform,
+      undefined
+    ) !important;
+    color: var(--font-form-element-color, #484848) !important;
+    padding-top: var(--font-form-element-padding-top, undefined) !important;
+    padding-bottom: var(
+      --font-form-element-padding-bottom,
+      undefined
+    ) !important;
+    background-color: var(--color-input-background, #ffffff) !important;
+    border-width: var(--border-form-element-border-width, 1px) !important;
+    border-color: var(--color-input-border, #ebebeb) !important;
+    border-radius: var(--border-form-element-border-radius, 4px) !important;
+    margin-bottom: var(--spacing-form-element-margin-bottom, 8px) !important;
+  }
+}
+._y9ev9r {
+  overflow: hidden !important;
+}
+._1w9nn735 {
+  appearance: none !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: rgb(72, 72, 72) !important;
+  padding: 11px 40px 11px 11px !important;
+  font-weight: normal !important;
+  background-color: transparent !important;
+  border: none !important;
+  border-radius: 0px !important;
+  margin: 0px !important;
+  text-indent: 0px !important;
+  height: unset !important;
+  min-height: unset !important;
+  display: block !important;
+  width: 100% !important;
+}
+@supports (--custom: properties) {
+  ._1w9nn735 {
+    font-size: var(--font-form-element-font-size, 16px) !important;
+    line-height: var(--font-form-element-line-height, 24px) !important;
+    letter-spacing: var(--font-form-element-letter-spacing, normal) !important;
+    font-family: var(
+      --font-form-element-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(
+      --font-form-element-text-transform,
+      undefined
+    ) !important;
+    color: var(--font-form-element-color, #484848) !important;
+    padding-top: var(--spacing-form-element-vertical, 11px) !important;
+    padding-bottom: var(--spacing-form-element-vertical, 11px) !important;
+    font-weight: var(--font-light-font-weight, normal) !important;
+    background-color: var(--color-clear, transparent) !important;
+    padding-left: var(--spacing-form-element-horizontal, 11px) !important;
+    padding-right: var(--spacing-select-arrow, 40px) !important;
+  }
+}
+._1idvclr {
+  position: absolute !important;
+  top: 16px !important;
+  right: 16px !important;
+  line-height: 0 !important;
+  pointer-events: none !important;
+}
+@supports (--custom: properties) {
+  ._1idvclr {
+    top: var(--spacing-select-arrow-margin-top, 16px) !important;
+    right: var(--spacing-select-arrow-margin-outside, 16px) !important;
+  }
+}
+._kt3i5a4 {
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  transition-property: background, border-color, color !important;
+  transition-duration: 0.2s !important;
+  transition-timing-function: ease-out !important;
+  width: auto !important;
+  cursor: pointer !important;
+  border-radius: 4px !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  padding: 10px 22px !important;
+  font-weight: 800 !important;
+  border-width: 2px !important;
+  border-style: solid !important;
+  min-width: 71.1935px !important;
+  box-shadow: none !important;
+  background: rgb(0, 132, 137) !important;
+  border-color: transparent !important;
+  color: rgb(255, 255, 255) !important;
+}
+@supports (--custom: properties) {
+  ._kt3i5a4 {
+    border-radius: var(--border-button-border-radius, 4px) !important;
+    font-size: var(--font-button-font-size, 16px) !important;
+    line-height: var(--font-button-line-height, 24px) !important;
+    letter-spacing: var(--font-button-letter-spacing, normal) !important;
+    font-family: var(
+      --font-button-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(--font-button-text-transform, undefined) !important;
+    padding-top: var(--spacing-button-vertical, 10px) !important;
+    padding-bottom: var(--spacing-button-vertical, 10px) !important;
+    font-weight: var(--font-bold-font-weight, 800) !important;
+    border-width: var(--border-button-border-width, 2px) !important;
+    padding-left: var(--spacing-button-horizontal, 22px) !important;
+    padding-right: var(--spacing-button-horizontal, 22px) !important;
+    box-shadow: var(--shadow-button-level0-box-shadow, none) !important;
+    background: var(--color-buttons-default-color, #008489) !important;
+    border-color: var(--color-buttons-default-border, transparent) !important;
+    color: var(--color-buttons-default-text, #ffffff) !important;
+  }
+}
+._ftj2sg4 {
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: normal !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  color: inherit !important;
+}
+@supports (--custom: properties) {
+  ._ftj2sg4 {
+    font-size: var(--font-button-font-size, 16px) !important;
+    line-height: var(--font-button-line-height, 24px) !important;
+    letter-spacing: var(--font-button-letter-spacing, normal) !important;
+    font-family: var(
+      --font-button-font-family,
+      Circular,
+      -apple-system,
+      BlinkMacSystemFont,
+      Roboto,
+      Helvetica Neue,
+      sans-serif
+    ) !important;
+    text-transform: var(--font-button-text-transform, undefined) !important;
+    padding-top: var(--font-button-padding-top, undefined) !important;
+    padding-bottom: var(--font-button-padding-bottom, undefined) !important;
+  }
+}
+._byj74f {
+  position: absolute !important;
+  inset: -1px !important;
+  background-color: rgb(0, 132, 137) !important;
+  opacity: 0 !important;
+  display: inherit !important;
+  border-radius: 32px !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(0, 132, 137) !important;
+  transition-property: opacity !important;
+  transition-duration: 250ms !important;
+  transition-timing-function: ease-in-out !important;
+}
+@supports (--custom: properties) {
+  ._byj74f {
+    background-color: var(--color-checked, #008489) !important;
+    border-radius: var(--border-switch-border-radius, 32px) !important;
+    border-width: var(--border-switch-border-width, 1px) !important;
+    border-color: var(--color-checked, #008489) !important;
+  }
+}
+._nkz5o8 {
+  width: 32px !important;
+  height: 32px !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 50% !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(235, 235, 235) !important;
+  color: rgb(72, 72, 72) !important;
+  display: block !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-duration: 250ms !important;
+  transition-timing-function: ease-in-out !important;
+  overflow: hidden !important;
+  position: absolute !important;
+  top: -1px !important;
+  left: -1px !important;
+  transform: translate3d(0px, 0px, 0px) !important;
+}
+@supports (--custom: properties) {
+  ._nkz5o8 {
+    width: var(--size-switch-size, 32px) !important;
+    height: var(--size-switch-size, 32px) !important;
+    background-color: var(--color-white, #ffffff) !important;
+    border-width: var(--border-switch-border-width, 1px) !important;
+    border-color: var(--color-accent-hr-gray, #ebebeb) !important;
+    color: var(--color-core-hof, #484848) !important;
+  }
+}
+._wd4c3r {
+  position: absolute !important;
+  inset: 10px 5px !important;
+  background-color: rgb(255, 255, 255) !important;
+  transform: scaleX(1) !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transform-origin: right center !important;
+}
+@supports (--custom: properties) {
+  ._wd4c3r {
+    background-color: var(--color-white, #ffffff) !important;
+  }
+}
+._zsj5a1p {
+  position: absolute !important;
+  inset: 0px !important;
+  transform: rotate(0deg) !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-delay: 62.5ms !important;
+  transition-duration: 187.5ms !important;
+}
+._1est833r {
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transform: scale(1, 1) !important;
+  transition-duration: 62.5ms !important;
+}
