--- a/css/utilities.css
+++ b/css/utilities.css
@@ -14,6 +14,10 @@
   overflow-y: hidden;
 }
 
+.mb-1 {
+  margin-bottom: 0.5rem !important;
+}
+
 @media (min-width: 744px) {
   .d-md-block {
     display: block !important;
