--- a/pages/css/professional-hosting.css
+++ b/pages/css/professional-hosting.css
@@ -6431,7 +6431,7 @@ html.scrollbar-gutter[class][class] {
   border-width: 1px !important;
   border-style: solid !important;
   border-color: rgb(235, 235, 235) !important;
-  margin: auto !important;
+  margin: auto;
   position: relative !important;
   display: inline-block !important;
   cursor: pointer !important;
@@ -6550,4 +6550,90 @@ html.scrollbar-gutter[class][class] {
   padding: 0px !important;
   color: inherit !important;
   contain: paint !important;
+}
+._1nqg52lg {
+  position: absolute !important;
+  inset: -1px !important;
+  background-color: rgb(0, 132, 137) !important;
+  display: inherit !important;
+  border-radius: 32px !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(0, 132, 137) !important;
+  transition-property: opacity !important;
+  transition-duration: 250ms !important;
+  transition-timing-function: ease-in-out !important;
+  opacity: 1 !important;
+}
+@supports (--custom: properties) {
+  ._1nqg52lg {
+    background-color: var(--color-checked, #008489) !important;
+    border-radius: var(--border-switch-border-radius, 32px) !important;
+    border-width: var(--border-switch-border-width, 1px) !important;
+    border-color: var(--color-checked, #008489) !important;
+  }
+}
+._v76fopi {
+  width: 32px !important;
+  height: 32px !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 50% !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  display: block !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-duration: 250ms !important;
+  transition-timing-function: ease-in-out !important;
+  overflow: hidden !important;
+  position: absolute !important;
+  top: -1px !important;
+  left: -1px !important;
+  transform: translate3d(16px, 0px, 0px) !important;
+  border-color: rgb(0, 132, 137) !important;
+  color: rgb(0, 132, 137) !important;
+}
+@supports (--custom: properties) {
+  ._v76fopi {
+    width: var(--size-switch-size, 32px) !important;
+    height: var(--size-switch-size, 32px) !important;
+    background-color: var(--color-white, #ffffff) !important;
+    border-width: var(--border-switch-border-width, 1px) !important;
+    border-color: var(--color-checked, #008489) !important;
+    color: var(--color-checked, #008489) !important;
+  }
+}
+._1mfsr54 {
+  position: absolute !important;
+  inset: 0px !important;
+}
+._1m1auhrh {
+  position: absolute !important;
+  top: 10px !important;
+  left: 5px !important;
+  right: 5px !important;
+  bottom: 10px !important;
+  background-color: rgb(255, 255, 255) !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transform-origin: right center !important;
+  transform: scaleX(0) !important;
+  transition-duration: 250ms !important;
+  transition-delay: 125ms !important;
+  transition-timing-function: ease-in-out !important;
+}
+@supports (--custom: properties) {
+  ._1m1auhrh {
+    background-color: var(--color-white, #ffffff) !important;
+  }
+}
+._1abyqs14 {
+  position: absolute !important;
+  inset: 0px !important;
+  transform: rotate(45deg) !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-delay: 62.5ms !important;
+}
+._pna3r {
+  transform: scale(0, 0) !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-duration: 62.5ms !important;
 }
