--- a/assets/css/pages/merchandising.css
+++ b/assets/css/pages/merchandising.css
@@ -864,7 +864,7 @@
   -moz-appearance: none!important;
   appearance: none!important;
   background: 0 0!important;
-  border: 1px solid!important;
+  border: 1px solid var(--j-qkgmf) !important;
   color: var(--f-k-smk-x)!important;
   cursor: pointer!important;
   display: -webkit-inline-box!important;
