--- a/style.css
+++ b/style.css
@@ -12,10 +12,13 @@
 
 body {
   background-color: #f8f9fa;
-  margin-top: 4rem;
-  margin-bottom: 4rem;
   font-family: 'Lato', sans-serif;
   line-height: 1.5;
+}
+
+section {
+  margin-top: 10rem;
+  margin-bottom: 4rem;
 }
 
 .container {
@@ -48,4 +51,39 @@ h1 {
   font-family: 'Merriweather', serif;
   margin-bottom: 1rem;
   text-transform: uppercase;
+}
+
+input {
+  background: none;
+  border: none;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+}
+
+.input-search {
+  position: fixed;
+  top: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #000;
+  color: #ffff;
+  padding: 1rem 1.5rem;
+  font-family: 'Merriweather', serif;
+  margin-bottom: 1rem;
+  opacity: 1;
+  transition: 300ms;
+}
+
+.input-search::placeholder {
+  color: #ffff;
+}
+
+.input-search--scrolled {
+  transform: translateX(-50%) scale(0.9);
+  opacity: 0.5;
+}
+
+.d-none {
+  display: none;
 }
